# bevy_fsl_box_frame

./: Cargo.toml
src/: box_frame.rs  drag_face.rs  handle_visibility.rs  highlight.rs  lib.rs  picking_backend.rs  solid_color_material.rs
src/shaders/: solid_color.wgsl
