[package]
name = "bevy_fsl_box_frame"
version = "0.7.0"
description = "A gizmo for manipulating an OBB via 3D picking"
edition = "2021"
authors = ["Duncan Fairbanks <duncan.fairbanks@fslabs.ca>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_fsl_box_frame"
homepage = "https://github.com/ForesightMiningSoftwareCorporation/bevy_fsl_box_frame"
documentation = "https://docs.rs/bevy_fsl_box_frame"
readme = "README.md"
keywords = ["bevy", "gizmo"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5"
bevy_polyline = { git = "https://github.com/fslabs/bevy_polyline", rev = "49bb4be904e8c3314efdb5266d1b6cd3d041297f" }
parry3d-f64 = "0.26"
bevy = { version = "0.18", default-features = false, features = [
  "bevy_asset",
  "bevy_pbr",
  "bevy_picking",
  "zstd_rust",
] }
nalgebra = { version = "0.34", features = ["convert-glam030"] }

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_asset",
  "bevy_pbr",
  "bevy_winit",
  "x11",
  "tonemapping_luts",
  "bevy_picking",
] }
